# agent-skills

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  catalog.json  catalog.schema.json  install.sh  registry.json  skills-library-spec.md
.claude-plugin/: marketplace.json  plugin.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  release.yml
catalog/: adr-capture.yaml  article-translator.yaml  learning-mode.yaml  onboard-our-stack.yaml  rubber-duck.yaml  steelman-then-break.yaml  toxic-senior-reviewer.yaml
docs/: blog-catalog-integration.md  skill-authoring.md  skills-library-spec.md
installer/: README.md  pyproject.toml
installer/scripts/: generate_registry.py
installer/src/askill/: __init__.py  __main__.py  cli.py
installer/src/askill/commands/: __init__.py  info.py  install.py  list.py  uninstall.py  wizard.py
installer/src/askill/core/: checksum.py  filesystem.py  http.py  installer.py  manifest.py  models.py  registry.py  scope.py  state.py
installer/src/askill/utils/: errors.py  output.py
installer/tests/: conftest.py
installer/tests/integration/: test_info.py  test_install.py  test_list.py  test_uninstall.py  test_wizard.py
installer/tests/unit/: test_catalog_models.py  test_checksum.py  test_filesystem.py  test_installer.py  test_manifest.py  test_marketplace.py  test_models.py  test_output.py  test_registry.py  test_scope.py  test_state.py
manifest/: catalog.json  registry.json  registry.schema.json
skills/adr-capture/: SKILL.md
skills/learning-mode/: SKILL.md
templates/: SKILL.md  catalog.yaml
(+18 files in other folders)
