[project]
name = "askill"
version = "0.1.0"
description = "CLI installer for the agent-skills library"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "httpx>=0.27",
    "packaging>=23.0",
    "pyyaml>=6.0",
    "questionary>=2.1.1",
]

[project.scripts]
askill = "askill.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/askill"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["askill"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "askill.core.*"
disallow_untyped_defs = true
disallow_any_generics = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=askill --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["askill"]
